Fix donation corner badge text being cut off

--- a/src/components/header/style.less
+++ b/src/components/header/style.less
@@ -461,7 +461,7 @@
 .cornerText {
 	align-self: flex-end;
 	display: inline-block;
-	font-size: 16px;
+	font-size: 1.1rem;
 	width: 100px;
 	padding: 0 3px 5px;
 	line-height: 1.3;
